--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,53 @@
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.12.0
 asgiref==3.11.0
 attrs==25.4.0
+billiard==4.2.4
+celery==5.6.0
+certifi==2025.11.12
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+distro==1.9.0
 Django==6.0
 django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
+exceptiongroup==1.3.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
 inflection==0.5.1
+jiter==0.12.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+kombu==5.6.1
+openai==2.13.0
+packaging==25.0
+pillow==12.0.0
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 PyYAML==6.0.3
 referencing==0.37.0
 rpds-py==0.30.0
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.4
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
 uritemplate==4.2.0
+vine==5.1.0
+wcwidth==0.2.14
