--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-.env
-.venv
+# Python
+backend/.venv/
+backend/__pycache__/
+backend/*.sqlite3
+backend/media/
+backend/staticfiles/
+
+# Env
+backend/.env
+frontend/.env.local
+
+# Node
+frontend/node_modules/
+frontend/.next/
+
+# OS
+.DS_Store
